fix invisible text closes #98

--- a/wikipedia-dark.user.css
+++ b/wikipedia-dark.user.css
@@ -152,7 +152,7 @@ regexp("https?://wiki\\.(rpcs3\\.net|(archlinux|mozilla)\\.org)\\/.*") {
   .oo-ui-messageDialog-title, .oo-ui-messageDialog-message,
   .mw-echo-ui-menuItemWidget > .oo-ui-labelElement-label, .mw-mmv-image-desc,
   .oo-ui-tabSelectWidget-framed .oo-ui-tabOptionWidget.oo-ui-optionWidget-selected,
-  .guider_content h1, .guider_content p, select#searchLanguage option {
+  .guider_content h1, .guider_content p, select#searchLanguage option, dt {
     color: var(--gray-9a);
   }
   body, h1, h2, h3, h4, h5, h6, #footer li,
